website/style.css
/* ... */
/**
 * Article content.
 *
 * Note: in the layout the table of content is part of div.article-content
 * (because it's generated as part of the Markdown).
 **/

.article-content {
  padding-top: 32px;
}

/* We only use h1 to h3, so don't bother styling h4+. */
h1, h2, h3 {
  line-height: 1.25;
  margin-top: 32px;
  margin-bottom: 12px;
  font-weight: bold;
  display: flex;
}

h1 {
  font-size: 1.3em;
  /* Create a vertical bar 0.3em wide and 0.3em away to the left, and move the
     text back to the original position. */
  border-left: darkred solid 0.3em;
  padding-left: 0.3em;
  margin-left: -0.6em;
}

h2 {
  font-size: 1.2em;
}

.api-comment {
  margin-left: auto;
  padding-left: 16px;
  font-weight: normal;
  font-size: 1rem;
}

p, ul, ol, pre {
  /* Hardcode a pixel value since <pre> has a smaller font size. */
  margin-bottom: 12px;
}

ul, ol {
  margin-left: 1.5em;
}

li {
  margin: 0.5em 0;
}

kbd {
  display: inline-block;
  border: 1px solid black;
  border-radius: 3px;
  padding: 0 3px;
  margin: 1px;
  font-size: 85%;
  font-family: "Lucida Grande", Arial, sans-serif;
}

table {
  border-collapse: collapse;
  width: 100%;
  margin-bottom: 16px;
}

td, th {
  border: 1px solid #aaa;
  text-align: left;
  padding: 0.4em;
}

.dark td, .dark th {
  border-color: #444;
}

td.notice {
  text-align: center;
  background-color: #ddd;
}

.dark td.notice {
  background-color: #333;
}

/** Links. */

a {
  text-decoration: none;
  color: #0645ad;
}

#main a:not(.button):not(.anchor):hover {
  text-decoration: underline;
}

.dark a {
  color: var(--link-color-on-black);
}

a.anchor::before {
  font-family: "fa-elv-sh";
  content: var(--icon-link);
  font-size: 0.9em;
  font-weight: normal;
  padding-left: 0.3em;
}

a.anchor {
  opacity: 0; /* Hide by default */
  color: inherit;
}

*:hover > a.anchor {
  opacity: 1;
}

a[target="_blank"]::after {
  font-family: "fa-elv-sh";
  content: var(--icon-link-ext);
  /* Set the icon some distance away. */
  padding-left: 0.3em;
  /* Make the icon slightly smaller and align it to the bottom.

     For normal links we should be able to use "vertical-align: bottom", but
     that doesn't work when the <a> is a flexbox (action buttons on the
     homepage). */
  font-size: 0.8em;
  padding-top: 0.2em;
}

/**
 * Code - inline code, block code and ttyshots.
 */

pre, code {
  font-family: var(--code-font);
  font-size: 0.85rem;
  border-radius: 3px;
}

p code {
  padding: 0.1em 0.5em;
  background-color: #f0f0f0;
}

pre {
  padding: 6px 10px;
  border: 1px solid #bbbbbb;
  background-color: white;
}

.dark code, .dark pre {
  background-color: #181818;
}

/* Scroll just the <code>, not the <header>. */
pre code {
  display: block;
  overflow-x: auto;
}

pre.language-ttyshot, pre.language-ttyshot code {
  /* Ttyshots often have right-justified elements (right prompt, vertical
     scrollbar), so make it as wide as its content. */
  width: fit-content;
  max-width: 100%;
}

pre.language-ttyshot code {
  /* Set the line height to be exactly equal to the height of the line box, so
     that vertical bars in ttyshots don't have gaps.

     According to MDN, the best practice is to use a dimensionless value
     relative to the "font size", but unfortunately different browsers disagree
     on exact which font dimension to use as the "font size". Since we fix the
     font anyway, we can hardcode a pixel value.

     16px is the maximal value that works for Chrome - 17px is fine for Safari
     and Firefox but leads to gaps in Chrome. 18px leads to gaps on all three.
  */
  line-height: 16px;
  /* Unfortunately hardcoding line-height is still not sufficient, because
     browsers also disagree on the height the font actually needs.

     If the browser decides that the font needs more than 16px (which is the
     case on Firefox 123), fixing line-height to 16px causes the content to
     overflow vertically, causing a vertical scrollbar to be shown, which in
     turn causes a horizontal scrollbar to be shown (because the vertical
     scrollbar takes up some horizontal space, so the content now also overflows
     horizontally). This works around that. */
  overflow-y: hidden;
}

pre header {
  font-family: var(--sans-font);
  /* Cancel the top, left and right paddings of the <pre> and create a bit of
     space between the header and the code. */
  margin: -6px -10px 3px;
  /* Replicate side paddings of the <pre>, and add appropriate top and bottom
     paddings. */
  padding: 4px 10px 3px;
  background-color: #ddd;
  color: black;
}

/* Set the fallback icon for the header and some common properties. */
pre header::before {
  content: var(--icon-doc-text);
  font-family: "fa-elv-sh";
  padding-right: 6px;
  speak: never;
}

pre header a {
  color: var(--link-color-on-white);
}

.dark pre header a {
  /* Overwrite color of ".dark a". */
  color: var(--link-color-on-white);
}

/* md2html generates a <p> inside the <header>. */
pre header p {
  display: inline;
}

pre.language-elvish header {
  background-color: #ddeedd;
  color: black;
}

pre.language-elvish header::before {
  content: var(--icon-file-code);
}

pre[class^="language-"][class$="-transcript"] header, pre.language-ttyshot header {
  background-color: #1a1a1a;
  color: white;
}

pre[class^="language-"][class$="-transcript"] header a, pre.language-ttyshot header a {
  color: var(--link-color-on-black);
}

pre[class^="language-"][class$="-transcript"] header::before, pre.language-ttyshot header::before {
  content: var(--icon-terminal);
}

/**
 * Category content.
 **/

#main.category {
  padding-top: 32px;
}

.article-list {
  margin-left: 0;
  list-style: none;
}

.article-list li {
  /* A large left padding for the bullet list .*/
  padding: 6px 8px 6px 30px;
  margin: 0;
  display: flex;
  flex-wrap: wrap;
}

.article-list li:nth-child(even) {
  background: #f6f6f6;
}

.dark .article-list li:nth-child(even) {
  background: #181818;
}
/* ... */

